# fiducia

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  chainlit.md  docker-compose.yaml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: de-CH.json
docs/: API_CONTRACTS.md  ARCHITECTURE.md  OPERATIONS.md  REDACTIONS_AND_NON_PUBLIC_COMPONENTS.md  show_facts_feature.md
public/: i18n.js  theme.json
public/elements/: CollectionViewer.jsx  DirectoryUploader.jsx  TimelineViewer.jsx
public/locales/de/: translations.json
public/locales/en/: translations.json
src/.chainlit/: config.toml
src/backend/: utils.py
src/backend/chatbot/: collection_metadata_manager.py  components.py  pipeline.py  routers.py  schemas.py  utils.py  vector_db_manager.py
src/backend/chatbot/auth/: authentik_oauth_provider.py  inject_custom_oauth_provider.py  validate_jwt.py
src/backend/chatbot/prompts/: extract_entities.system.prompt  extract_entities.user.prompt  facts_extraction_initial.prompt  facts_extraction_update.prompt  facts_finalization.prompt  follow_up_query_expansion.prompt  follow_up_question_classification.prompt  rag.prompt  rag.system.prompt
src/backend/chatbot/prompts/contextual_retrieval/: chunk_context.prompt  document.prompt  token_efficient_contextualization.prompt  token_efficient_metadata.prompt
src/frontend/: app.py  utils.py
