[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.6.8",
    "docling>=2.40.0",
    "docling-haystack>=0.1.1",
    "fastembed-haystack>=1.5.0",
    "haystack-ai>=2.15.1",
    "huggingface-hub>=0.27.0",
    "litellm>=1.75.5.post1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "ocrmypdf>=16.10.2",
    "pypdf>=5.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-pptx>=1.0.2",
    "qdrant-haystack>=9.2.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "ptpython>=3.0.30",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend.*"]
